# CSC8502-Coursework

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Overview.md  README.md
cmake/: warnings.cmake
meshes/: Role_T.mat
shaders/: basic.frag.glsl  basic.vert.glsl  batch.vert.glsl  batch_shadow.vert.glsl  batch_shadow_cube.vert.glsl  fullscreen.vert.glsl  skin.vert.glsl  skybox.frag.glsl  tex.frag.glsl  tex_bindless.frag.glsl  water.frag.glsl
shaders/compute/: skin.comp.glsl
shaders/debug/: depth.frag.glsl
shaders/heightmap/: frag.glsl  shadow.tess_eval.glsl  shadow_cube.tess_eval.glsl  tess_con.glsl  tess_eval.glsl  vert.glsl
shaders/lighting/: combine.frag.glsl  depth_to_linear.frag.glsl  omni_shadow.geom.glsl  point_light.frag.glsl  point_light.vert.glsl  shadow.geom.glsl  spot_light.frag.glsl  spot_light.vert.glsl  spotlight.vert.glsl
shaders/postprocess/: bloom.frag.glsl  blur.frag.glsl  fxaa.frag.glsl  reflections.frag.glsl  skybox.frag.glsl
shaders/water/: frag.glsl  shadow.vert.glsl  shadow_cube.vert.glsl  vert.glsl
src/: CMakeLists.txt  Robot.cpp  Robot.h  blur.hpp  cameraTrack.hpp  directionalLight.hpp  goober.cpp  goober.hpp  heightmap.cpp  heightmap.hpp  light.hpp  main.cpp  pointLight.hpp  postprocess.cpp  postprocess.hpp  renderer.cpp  renderer.hpp  renderer_setup.cpp  skybox.hpp  spotLight.hpp  water.hpp
src/logger/: logger.cpp  logger.hpp
textures/RealisticCharacter/role/: Body.afphoto  Body.afphoto~lock~  Hair.afphoto  Hair.afphoto~lock~  head.afphoto  head.afphoto~lock~
textures/RealisticCharacter/weapon/: Weapon.afphoto  (+1 more)
